# multimodal-rag-v2

./: .env.example  README.md  app.py  chunks.pkl  config.py  embedder.py  evaluation.py  faiss_index.idx  ingest.py  main.py  memory.py  prompts.py  pyproject.toml  rag.py
app/: run_preprocess.py
app/api/: routes.py
app/core/: config.py  memory.py
app/rag/: chunker.py  embedding.py  evaluator.py  generator.py  prompts.py  retriver.py
app/retriver/: vector_store.py
app/utils/: extractor.py
